# routes/swagger.js
@@ -1,7 +1,27 @@
+// const router = require('express').Router();
+// const swaggerUi = require('swagger-ui-express');
+// const swaggerDocument = require('../swagger.json');
+// router.use('/api-docs', swaggerUi.serve);
+// router.use('/api-docs', swaggerUi.setup(swaggerDocument));
+
+// module.exports = router;
+
 const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
+require('dotenv').config();
+
+const swaggerUiOptions = {
+  oauth2RedirectUrl: `${process.env.BASE_URL}/api-docs/oauth2-redirect.html`,
+  oauth: {
+    clientId: process.env.GITHUB_CLIENT_ID,
+    additionalQueryStringParams: {
+      state: Buffer.from('/api-docs/oauth2-redirect.html').toString('base64')
+    }
+  }
+};
+
 router.use('/api-docs', swaggerUi.serve);
-router.use('/api-docs', swaggerUi.setup(swaggerDocument));
+router.use('/api-docs', swaggerUi.setup(swaggerDocument, swaggerUiOptions));
 
 module.exports = router;
